  specified. Reported by Milliways (#0003018).
- Improved description of link::hub/leaf/leafdepth in unreal32docs.html reported by Bugz
  (#2623), also fixed typo (leafdepth, not leaf-depth), reported by monas (#3083).
- c-ares resolver: upgrade to 1.3.2.
- upgraded windows c-ares (areslib.lib) as well.
- fix for above
- Added release notes for 3.2.6
- Fixed help.conf typo
** 3.2.6-rc1 release **
- Get rid of some old stuff in release notes
- Added donators since 3.2.5
- Setting set::pingpong-warning didn't work, reported by vonitsanet, patch supplied by
  avb (#0003131).
- Don't show silence list to others
- Improved detection of bad set::modes-on-oper and oper::modes, now rejecting things like
  'o', 'z', and more.
- Fix from above fixes an /OPER announce problem reported by Bock (#0003135).
- Fixed SSL bug where an outgoing connect (either autoconnect, or /connect), would not
  show any error message when it failed. Error information has also been slightly
  improved. Reported by vonitsanet (#0003138).
- Updated SVSNLINE syntax in help.conf (the remove-syntax).
- Post-3.2.5 CVS-only bug: Fixed spamfilter on user target not working properly when
  changing nicks (was still trying to match on the old nick), reported by vonitsanet
  (#0003143).
** 3.2.6-rc2 release **
- Fixed possible crash with using quarantine, reported by Sephiroth (#0003151).
- Showing even more SSL server errors now, hopefully all of them, also changed the
  error notice a bit so it's much more like non-SSL server link errors. Reported by
  vonitsanet (#0003150).
** 3.2.6-rc3 release **
- Updated release notes, mass-change of version number, no code changes.
** 3.2.6 release **
- Fixed bug where SVSO was unable to give various operflags such as q, d, X, reported
  by prodigy2k7 (#0003203).
- /WHOIS now shows the ident of local users - if ident enabled and they had an ident -
  instead of always "*" in the 'is connecting from' line. Suggested and patch provided
  by djGrrr (#0002888).